<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaktorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#008000"
                android:padding="@dimen/padding"
                android:text="Faktor "
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/hujan" />

            <ImageView
                android:layout_width="268dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:src="@drawable/df_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/lereng" />

            <ImageView
                android:layout_width="224dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:src="@drawable/df_9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/padat" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_13"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/batu" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_12"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/tanah" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_11"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/rombakan" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>