<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JenisActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#008000"
                android:padding="@dimen/padding"
                android:text="Jenis"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_16"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/translasi" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_15"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/rotasi" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_14"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/blok" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_13"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/batu" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_12"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/tanah" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:src="@drawable/df_11"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/rombakan" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>